--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap");
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scrollbar-width: thin; 
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+  background-color: grey;
 }
 
 a {
@@ -15,9 +19,11 @@ a {
 
 .app {
   min-height: 98.5vh;
-  
-  background-image: url("/public/backimg.jpg");
-  background-size:100%;
-  image-rendering: pixelated;
-  
+  border: 8px solid #39445a93;
+  margin: 5px;
+  padding: 5px;
+}
+
+.mainImg {
+  padding: 10px 0 5px 0;
 }
